--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Home</title>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-md orange-color">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Witches Cauldron</a>
+            <a class="navbar-brand" href="#">Witches Brew</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -28,9 +28,22 @@
             </div>
         </div>
     </nav>
-    <div>
-        <h1 class="black-color-text">Witches Cauldron</h1>
-    </div>
+    <section class="background">
+        <h1 class="white-color-text main-heading">Witches Brew</h1>
+        <div class="container pb-4">
+            <div class="row">
+                <div class="col d-flex justify-content-center">
+                    <a class="btn btn-custom-orange" href="#">Start Game</a>
+                </div>
+                <div class="col d-flex justify-content-center">
+                    <a class="btn btn-custom-orange" href="#">How to Play</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="orange-color black-color-text py-5">
+        <p>Footer Placerholder Text</p>
+    </footer>
     <!-- Bootstrap Script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
