Add team links to footer

--- a/index.html
+++ b/index.html
@@ -41,13 +41,54 @@
             </div>
         </div>
     </section>
-    <footer class="orange-color black-color-text py-5">
-        <p>Footer Placerholder Text</p>
+    <footer class="orange-color black-color-text py-2">
+        <h3 class="text-center">Meet the Team!</h3>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-sm-6 d-flex justify-content-center">
+                    <ul>
+                        <li class="my-2"><a class="footer-links" href="https://github.com/Erikas-Ramanauskas"
+                                target="_blank" rel="noopener"
+                                aria-label="Visit Erikas on Github (opens in a new tab)">Erikas
+                                - Github <i class="fa-brands fa-github"></i></a>
+                        </li>
+                        <li><a class="footer-links" href="https://github.com/FlashDrag" target="_blank" rel="noopener"
+                                aria-label="Visit Pavlo on Github (opens in a new tab)">Pavlo - Github <i
+                                    class="fa-brands fa-github"></i></a>
+                        </li>
+                        <li class="my-2"><a class="footer-links" href="https://github.com/Melody-Lisa" target="_blank"
+                            rel="noopener" aria-label="Visit Melody on Github (opens in a new tab)">Melody
+                            - Github <i class="fa-brands fa-github"></i></a>
+                    </li>
+                    </ul>
+                </div>
+                <div class="col-12 col-sm-6 d-flex justify-content-center">
+                    <ul>
+                        <li><a class="footer-links" href="https://www.linkedin.com/in/pablo-embarach-boeira/"
+                            target="_blank" rel="noopener"
+                            aria-label="Visit Pablo on linkedin (opens in a new tab)">Pablo -
+                            Linkedin <i class="fa-brands fa-linkedin"></i></a>
+                    </li>
+                        <li class="my-2"><a class="footer-links"
+                                href="https://www.linkedin.com/in/linus-elvius-52b098266/" target="_blank"
+                                rel="noopener" aria-label="Visit Linus on linkedin (opens in a new tab)">Linus
+                                - Linkedin <i class="fa-brands fa-linkedin"></i></a>
+                        </li>
+                        <li><a class="footer-links" href="https://github.com/fenton1000" target="_blank" rel="noopener"
+                                aria-label="Visit Mark on Github (opens in a new tab)">Mark - Github <i
+                                    class="fa-brands fa-github"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </footer>
     <!-- Bootstrap Script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
     </script>
+    <!-- Fontawesome Script -->
+    <script src="https://kit.fontawesome.com/4e8d2c2bb0.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
