--- a/index.html
+++ b/index.html
@@ -46,35 +46,35 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 col-sm-6 d-flex justify-content-center">
-                    <ul>
-                        <li class="my-2"><a class="footer-links" href="https://github.com/Erikas-Ramanauskas"
+                    <ul class="my-0">
+                        <li class="my-1"><a class="footer-links" href="https://github.com/Erikas-Ramanauskas"
                                 target="_blank" rel="noopener"
                                 aria-label="Visit Erikas on Github (opens in a new tab)">Erikas
                                 - Github <i class="fa-brands fa-github"></i></a>
                         </li>
-                        <li><a class="footer-links" href="https://github.com/FlashDrag" target="_blank" rel="noopener"
+                        <li class="my-1"><a class="footer-links" href="https://github.com/FlashDrag" target="_blank" rel="noopener"
                                 aria-label="Visit Pavlo on Github (opens in a new tab)">Pavlo - Github <i
                                     class="fa-brands fa-github"></i></a>
                         </li>
-                        <li class="my-2"><a class="footer-links" href="https://github.com/Melody-Lisa" target="_blank"
+                        <li class="my-1"><a class="footer-links" href="https://github.com/Melody-Lisa" target="_blank"
                             rel="noopener" aria-label="Visit Melody on Github (opens in a new tab)">Melody
                             - Github <i class="fa-brands fa-github"></i></a>
                     </li>
                     </ul>
                 </div>
                 <div class="col-12 col-sm-6 d-flex justify-content-center">
-                    <ul>
-                        <li><a class="footer-links" href="https://www.linkedin.com/in/pablo-embarach-boeira/"
+                    <ul class="my-0">
+                        <li class="my-1"><a class="footer-links" href="https://www.linkedin.com/in/pablo-embarach-boeira/"
                             target="_blank" rel="noopener"
                             aria-label="Visit Pablo on linkedin (opens in a new tab)">Pablo -
                             Linkedin <i class="fa-brands fa-linkedin"></i></a>
                     </li>
-                        <li class="my-2"><a class="footer-links"
+                        <li class="my-1"><a class="footer-links"
                                 href="https://www.linkedin.com/in/linus-elvius-52b098266/" target="_blank"
                                 rel="noopener" aria-label="Visit Linus on linkedin (opens in a new tab)">Linus
                                 - Linkedin <i class="fa-brands fa-linkedin"></i></a>
                         </li>
-                        <li><a class="footer-links" href="https://github.com/fenton1000" target="_blank" rel="noopener"
+                        <li class="my-1"><a class="footer-links" href="https://github.com/fenton1000" target="_blank" rel="noopener"
                                 aria-label="Visit Mark on Github (opens in a new tab)">Mark - Github <i
                                     class="fa-brands fa-github"></i></a>
                         </li>
