Add more game assets

--- a/assets/images/attributions.html
+++ b/assets/images/attributions.html
@@ -12,3 +12,7 @@
 <!-- For witches kitchen background -->
 
 <a href="https://www.freepik.com/free-vector/alchemical-laboratory-with-magic-books-potions_37205185.htm#query=kitchen%20halloween%20game%20background&position=5&from_view=search&track=ais">Image by upklyak</a> on Freepik
+
+<!-- For ripped paper images -->
+
+<a href="https://www.freepik.com/free-vector/set-ripped-paper-cardboard-pieces-black_37340853.htm#query=ripped%20paper%20game%20art&position=48&from_view=search&track=ais">Image by upklyak</a> on Freepik
