--- a/game.html
+++ b/game.html
@@ -30,14 +30,62 @@
       </div>
     </nav>
     <!-- Players and inventory -->
-    <div class="row">
+    <div class="row row-cols-1">
       <div class="col-4">
         <!-- Enemy Card -->
-        <div class="card">
+        <div class="card h-100 enemy-card">
           <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title text-center">Enemy-Name</h5>
+            <img src="assets/images/enemies/grim-reaper.png" class="card-img-top" alt="grim-reaper">
+          </div>
+          <div class="card-footer bg-transparent">
+            <!-- Enemy Stats -->
+            <div class="row enemy-stats-section">
+              <div class="col">
+                <div class="progress">
+                  <div
+                    id="enemy-strength"
+                    class="progress-bar bg-danger"
+                    role="progressbar"
+                    aria-valuenow="50"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                    style="width: 50%"
+                  >
+                    <span class="text-left pl-2 progress-item">Strength</span>
+                  </div>
+                </div>
+                <div class="progress">
+                  <div
+                    id="enemy-agility"
+                    class="progress-bar bg-success"
+                    role="progressbar"
+                    aria-valuenow="80"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                    style="width: 80%"
+                  >
+                    <span class="text-left pl-2 progress-item">Agility</span
+                    >
+                  </div>
+                </div>
+                <div class="progress">
+                  <div
+                    id="enemy-dexterity"
+                    class="progress-bar bg-info"
+                    role="progressbar"
+                    aria-valuenow="65"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                    style="width: 65%"
+                  >
+                    <span class="text-left pl-2 progress-item">Dexterity</span
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- ./enemy stats -->
           </div>
         </div>
       </div>
@@ -46,12 +94,74 @@
       </div>
       <div class="col-4">
         <!-- Player Card -->
-        <div class="card">
+        <div class="card h-100 player-card">
           <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title text-center">Player-Name</h5>
+            <img src="assets/images/player/wizard.jpeg" class="card-img-top" alt="grim-reaper">
           </div>
+          <div class="card-footer bg-transparent">
+            <!-- Player Stats -->
+            <div class="row player-stats-section">
+              <div class="col">
+                <div class="progress">
+                  <div
+                    id="player-hp"
+                    class="progress-bar bg-warning"
+                    role="progressbar"
+                    aria-valuenow="85"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                    style="width: 85%"
+                  >
+                    <span class="text-left pl-2 progress-item">HP</span>
+                  </div>
+                </div>
+                <div class="progress">
+                  <div
+                    id="player-strength"
+                    class="progress-bar bg-danger"
+                    role="progressbar"
+                    aria-valuenow="85"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                    style="width: 85%"
+                  >
+                    <span class="text-left pl-2 progress-item">Strength</span>
+                  </div>
+                </div>
+                <div class="progress">
+                  <div
+                    id="player-agility"
+                    class="progress-bar bg-success"
+                    role="progressbar"
+                    aria-valuenow="70"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                    style="width: 70%"
+                  >
+                    <span class="text-left pl-2 progress-item">Agility</span
+                    >
+                  </div>
+                </div>
+                <div class="progress">
+                  <div
+                    id="player-dexterity"
+                    class="progress-bar bg-info"
+                    role="progressbar"
+                    aria-valuenow="80"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                    style="width: 80%"
+                  >
+                    <span class="text-left pl-2 progress-item">Dexterity</span
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- ./player stats -->
+          </div>
+
         </div>
       </div>
     </div>
