--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Home</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <title>Witches Brew - Home</title>
 </head>
 
 <body>
@@ -52,30 +56,30 @@
                                 aria-label="Visit Erikas on Github (opens in a new tab)">Erikas
                                 - Github <i class="fa-brands fa-github"></i></a>
                         </li>
-                        <li class="my-1"><a class="footer-links" href="https://github.com/FlashDrag" target="_blank" rel="noopener"
-                                aria-label="Visit Pavlo on Github (opens in a new tab)">Pavlo - Github <i
+                        <li class="my-1"><a class="footer-links" href="https://github.com/FlashDrag" target="_blank"
+                                rel="noopener" aria-label="Visit Pavlo on Github (opens in a new tab)">Pavlo - Github <i
                                     class="fa-brands fa-github"></i></a>
                         </li>
                         <li class="my-1"><a class="footer-links" href="https://github.com/Melody-Lisa" target="_blank"
-                            rel="noopener" aria-label="Visit Melody on Github (opens in a new tab)">Melody
-                            - Github <i class="fa-brands fa-github"></i></a>
-                    </li>
+                                rel="noopener" aria-label="Visit Melody on Github (opens in a new tab)">Melody
+                                - Github <i class="fa-brands fa-github"></i></a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-12 col-sm-6 d-flex justify-content-center">
                     <ul class="my-0">
-                        <li class="my-1"><a class="footer-links" href="https://www.linkedin.com/in/pablo-embarach-boeira/"
-                            target="_blank" rel="noopener"
-                            aria-label="Visit Pablo on linkedin (opens in a new tab)">Pablo -
-                            Linkedin <i class="fa-brands fa-linkedin"></i></a>
-                    </li>
+                        <li class="my-1"><a class="footer-links"
+                                href="https://www.linkedin.com/in/pablo-embarach-boeira/" target="_blank" rel="noopener"
+                                aria-label="Visit Pablo on linkedin (opens in a new tab)">Pablo -
+                                Linkedin <i class="fa-brands fa-linkedin"></i></a>
+                        </li>
                         <li class="my-1"><a class="footer-links"
                                 href="https://www.linkedin.com/in/linus-elvius-52b098266/" target="_blank"
                                 rel="noopener" aria-label="Visit Linus on linkedin (opens in a new tab)">Linus
                                 - Linkedin <i class="fa-brands fa-linkedin"></i></a>
                         </li>
-                        <li class="my-1"><a class="footer-links" href="https://github.com/fenton1000" target="_blank" rel="noopener"
-                                aria-label="Visit Mark on Github (opens in a new tab)">Mark - Github <i
+                        <li class="my-1"><a class="footer-links" href="https://github.com/fenton1000" target="_blank"
+                                rel="noopener" aria-label="Visit Mark on Github (opens in a new tab)">Mark - Github <i
                                     class="fa-brands fa-github"></i></a>
                         </li>
                     </ul>
