Add potions and ingredients tab to the game board; #23

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="#">Play</a>
+                    <a class="nav-link" href="game.html">Play</a>
                     <a class="nav-link" href="#">Game Rules</a>
                     <a class="nav-link" href="#">About Us</a>
                 </div>
@@ -33,7 +33,7 @@
         <div class="container pb-4">
             <div class="row">
                 <div class="col d-flex justify-content-center">
-                    <a class="btn btn-custom-orange" href="#">Start Game</a>
+                    <a class="btn btn-custom-orange" href="game.html">Start Game</a>
                 </div>
                 <div class="col d-flex justify-content-center">
                     <a class="btn btn-custom-orange" href="#">How to Play</a>
