--- a/game.html
+++ b/game.html
@@ -31,8 +31,9 @@
     </nav>
     <!-- Players and inventory -->
     <div class="row row-cols-1">
+
+      <!-- Enemy Card -->
       <div class="col-4">
-        <!-- Enemy Card -->
         <div class="card h-100 enemy-card">
           <div class="card-body">
             <h5 class="card-title text-center">Enemy-Name</h5>
@@ -43,44 +44,21 @@
             <div class="row enemy-stats-section">
               <div class="col">
                 <div class="progress">
-                  <div
-                    id="enemy-strength"
-                    class="progress-bar bg-danger"
-                    role="progressbar"
-                    aria-valuenow="50"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                    style="width: 50%"
-                  >
+                  <div id="enemy-strength" class="progress-bar bg-danger" role="progressbar" aria-valuenow="50"
+                    aria-valuemin="0" aria-valuemax="100" style="width: 50%">
                     <span class="text-left pl-2 progress-item">Strength</span>
                   </div>
                 </div>
                 <div class="progress">
-                  <div
-                    id="enemy-agility"
-                    class="progress-bar bg-success"
-                    role="progressbar"
-                    aria-valuenow="80"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                    style="width: 80%"
-                  >
-                    <span class="text-left pl-2 progress-item">Agility</span
-                    >
+                  <div id="enemy-agility" class="progress-bar bg-success" role="progressbar" aria-valuenow="80"
+                    aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+                    <span class="text-left pl-2 progress-item">Agility</span>
                   </div>
                 </div>
                 <div class="progress">
-                  <div
-                    id="enemy-dexterity"
-                    class="progress-bar bg-info"
-                    role="progressbar"
-                    aria-valuenow="65"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                    style="width: 65%"
-                  >
-                    <span class="text-left pl-2 progress-item">Dexterity</span
-                    >
+                  <div id="enemy-dexterity" class="progress-bar bg-info" role="progressbar" aria-valuenow="65"
+                    aria-valuemin="0" aria-valuemax="100" style="width: 65%">
+                    <span class="text-left pl-2 progress-item">Dexterity</span>
                   </div>
                 </div>
               </div>
@@ -89,11 +67,46 @@
           </div>
         </div>
       </div>
+      <!-- ./enemy card -->
+
+      <!-- Potions and Ingredients -->
       <div class="col-4">
-        <!-- collapsible inventory -->
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+          <li class="nav-item" role="presentation">
+            <button class="nav-link active" id="potions-tab" data-bs-toggle="tab" data-bs-target="#potions-tab-pane"
+              type="button" role="tab" aria-controls="potions-tab-pane" aria-selected="true">
+              Potions
+            </button>
+          </li>
+          <li class="nav-item" role="presentation">
+            <button class="nav-link" id="ingredients-tab" data-bs-toggle="tab" data-bs-target="#ingredients-tab-pane"
+              type="button" role="tab" aria-controls="ingredients-tab-pane" aria-selected="false">
+              Ingredients
+            </button>
+          </li>
+        </ul>
+        <div class="tab-content" id="myTabContent">
+
+          <!-- Potions Tab -->
+          <div class="tab-pane fade show active" id="potions-tab-pane" role="tabpanel" aria-labelledby="potions-tab"
+            tabindex="0">
+            <!-- potion grid using js -->
+          </div>
+          <!-- ./potions tab -->
+
+          <!-- Ingredients Tab -->
+          <div class="tab-pane fade" id="ingredients-tab-pane" role="tabpanel" aria-labelledby="ingredients-tab"
+            tabindex="0">
+            <!-- ingredient grid using js -->
+          </div>
+          <!-- ./ingredients tab -->
+
+        </div>
       </div>
+      <!-- ./potions and ingredients -->
+
+      <!-- Player Card -->
       <div class="col-4">
-        <!-- Player Card -->
         <div class="card h-100 player-card">
           <div class="card-body">
             <h5 class="card-title text-center">Player-Name</h5>
@@ -104,85 +117,59 @@
             <div class="row player-stats-section">
               <div class="col">
                 <div class="progress">
-                  <div
-                    id="player-hp"
-                    class="progress-bar bg-warning"
-                    role="progressbar"
-                    aria-valuenow="85"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                    style="width: 85%"
-                  >
+                  <div id="player-hp" class="progress-bar bg-warning" role="progressbar" aria-valuenow="85"
+                    aria-valuemin="0" aria-valuemax="100" style="width: 85%">
                     <span class="text-left pl-2 progress-item">HP</span>
                   </div>
                 </div>
                 <div class="progress">
-                  <div
-                    id="player-strength"
-                    class="progress-bar bg-danger"
-                    role="progressbar"
-                    aria-valuenow="85"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                    style="width: 85%"
-                  >
+                  <div id="player-strength" class="progress-bar bg-danger" role="progressbar" aria-valuenow="85"
+                    aria-valuemin="0" aria-valuemax="100" style="width: 85%">
                     <span class="text-left pl-2 progress-item">Strength</span>
                   </div>
                 </div>
                 <div class="progress">
-                  <div
-                    id="player-agility"
-                    class="progress-bar bg-success"
-                    role="progressbar"
-                    aria-valuenow="70"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                    style="width: 70%"
-                  >
-                    <span class="text-left pl-2 progress-item">Agility</span
-                    >
+                  <div id="player-agility" class="progress-bar bg-success" role="progressbar" aria-valuenow="70"
+                    aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+                    <span class="text-left pl-2 progress-item">Agility</span>
                   </div>
                 </div>
                 <div class="progress">
-                  <div
-                    id="player-dexterity"
-                    class="progress-bar bg-info"
-                    role="progressbar"
-                    aria-valuenow="80"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                    style="width: 80%"
-                  >
-                    <span class="text-left pl-2 progress-item">Dexterity</span
-                    >
+                  <div id="player-dexterity" class="progress-bar bg-info" role="progressbar" aria-valuenow="80"
+                    aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+                    <span class="text-left pl-2 progress-item">Dexterity</span>
                   </div>
                 </div>
               </div>
             </div>
             <!-- ./player stats -->
           </div>
-
         </div>
       </div>
+      <!-- ./player card -->
+
     </div>
     <div class="row text-center">
+
       <!-- Cauldron -->
       <div class="col">
         <div id="cauldron">
           <img src="assets/images/general/cauldron_brew.gif" alt="Cauldron">
         </div>
       </div>
+      <!-- ./cauldron -->
+
     </div>
   </section>
 
   <!-- Game Rules Modal -->
-  <div class="modal fade" id="gameRulesModal" data-bs-backdrop="static"
-    data-bs-keyboard="false" tabindex="-1" aria-labelledby="gameRulesLabel" aria-hidden="true">
+  <div class="modal fade" id="gameRulesModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    aria-labelledby="gameRulesLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
       <div class="modal-content">
         <div class="modal-header">
-            <h5 class="modal-title text-center w-100">Game Rules</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <h5 class="modal-title text-center w-100">Game Rules</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
           Lorem ipsum dolor sit amet consectetur, adipisicing elit.
@@ -194,13 +181,13 @@
   </div>
 
   <!-- Recipes Modal -->
-  <div class="modal fade" id="recipesModal" data-bs-backdrop="static"
-    data-bs-keyboard="false" tabindex="-1" aria-labelledby="recipesLabel" aria-hidden="true">
+  <div class="modal fade" id="recipesModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    aria-labelledby="recipesLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
       <div class="modal-content">
         <div class="modal-header">
-            <h5 class="modal-title text-center w-100">Recipes</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <h5 class="modal-title text-center w-100">Recipes</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
           <!-- potion recipes -->
@@ -224,7 +211,96 @@
   <!-- Bootstrap Script -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
-    </script>
+  </script>
+
+  <!-- Grid for ingredients and potions -->
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const ingredients = [
+        "ancient_celestial_sand",
+        "basilisk_venom",
+        "bat_wing",
+        "dragons_tooth",
+        "eye_of_newt",
+        "frogs_leg",
+        "kraken_ink",
+        "lizard_tail",
+        "phoenix_feather",
+        "serpent_scales",
+        "split_bark",
+        "unicorn_horn",
+        "vampires_fang",
+        "werewolf_fur",
+        "wyvern_scale",
+      ];
+
+      const potions = [
+        "petrifying_euphoria_brew",
+        "djinns_desire_elixir",
+        "mystic_serenity_elixir",
+        "spectral_whisper_draught",
+        "eagles_insight_elixir",
+        "chimeras_chalice_mix",
+        "lunar_reverie_brew",
+        "whispering_shadows_elixir",
+        "dragonic_resilience_elixir",
+        "harpys_lullaby_elixir",
+        "moonlit_mirage_elixir",
+        "pixies_giggling_goblet",
+        "astral_sojourn_elixir",
+        "shadowcloak_elixir",
+        "leviathans_call_concoction",
+        "sirens_lament_potion",
+        "gryphons_quill_inkwell",
+        "thunderstrike_fury_elixir",
+        "elemental_harmony_elixir",
+        "faerie_dreamveaver_elixir",
+        "celestial_alchemy_conoction",
+        "naiads_aquatic_aura_brew",
+        "inferno_ignition_tonic",
+        "eclipsed_destiny_elixir",
+        "vipers_visions_draught",
+        "wispwood_whispers_elixir",
+      ];
+
+      /**
+     * Populates the given tab with a grid of items (ingredients or potions).
+     *
+     * @param {string} type - The type of items ("ingredients" or "potions").
+     * @param {Array<string>} items - The list of item names to display.
+     */
+      function populateTab(type, items) {
+        const tabPane = document.getElementById(`${type}-tab-pane`);
+        const grid = document.createElement("div");
+
+        // grid classes
+        grid.classList.add("row", "row-cols-4", "g-2");
+
+        items.forEach((item) => {
+          const img = document.createElement("img");
+          img.classList.add(`${type}-img`);
+
+          // tooltips
+          img.setAttribute("data-bs-toggle", "tooltip");
+          img.setAttribute("data-bs-placement", "top");
+          img.setAttribute("data-bs-title", item.replaceAll("_", " "));
+
+          // set image source
+          img.src = `assets/images/${type}/${item}.png`;
+          grid.appendChild(img);
+        });
+
+        tabPane.appendChild(grid);
+      }
+
+      populateTab("ingredients", ingredients);
+      populateTab("potions", potions);
+
+      // Initialize the tooltips
+      const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]');
+      const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl));
+    })
+  </script>
 </body>
 
 </html>
