--- a/index.html
+++ b/index.html
@@ -15,78 +15,17 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md orange-color">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Witches Brew</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="game.html">Play</a>
-                    <a class="nav-link" href="#">Game Rules</a>
-                    <a class="nav-link" href="#">About Us</a>
-                </div>
-            </div>
-        </div>
-    </nav>
     <section class="background">
         <h1 class="white-color-text main-heading">Witches Brew</h1>
-        <div class="container pb-4">
-            <div class="row">
-                <div class="col d-flex justify-content-center">
-                    <a class="btn btn-custom-orange" href="game.html">Start Game</a>
-                </div>
-                <div class="col d-flex justify-content-center">
-                    <a class="btn btn-custom-orange" href="#">How to Play</a>
-                </div>
+        <div class="d-flex justify-content-center">
+            <div class="d-flex flex-column align-items-center justify-content-around button-box">
+                <a class="btn btn-custom-orange button-custom" href="game.html">Start Game</a>
+                <a class="btn btn-custom-orange button-custom" href="kitchen.html">Witches Kitchen</a>
+                <a class="btn btn-custom-orange button-custom" href="#">How to Play</a>
+                <a class="btn btn-custom-orange button-custom" href="#">The Creators</a>
             </div>
         </div>
     </section>
-    <footer class="orange-color black-color-text py-2">
-        <h3 class="text-center">Meet the Team!</h3>
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-sm-6 d-flex justify-content-center">
-                    <ul class="my-0">
-                        <li class="my-1"><a class="footer-links" href="https://github.com/Erikas-Ramanauskas"
-                                target="_blank" rel="noopener"
-                                aria-label="Visit Erikas on Github (opens in a new tab)">Erikas
-                                - Github <i class="fa-brands fa-github"></i></a>
-                        </li>
-                        <li class="my-1"><a class="footer-links" href="https://github.com/FlashDrag" target="_blank"
-                                rel="noopener" aria-label="Visit Pavlo on Github (opens in a new tab)">Pavlo - Github <i
-                                    class="fa-brands fa-github"></i></a>
-                        </li>
-                        <li class="my-1"><a class="footer-links" href="https://github.com/Melody-Lisa" target="_blank"
-                                rel="noopener" aria-label="Visit Melody on Github (opens in a new tab)">Melody
-                                - Github <i class="fa-brands fa-github"></i></a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-12 col-sm-6 d-flex justify-content-center">
-                    <ul class="my-0">
-                        <li class="my-1"><a class="footer-links"
-                                href="https://www.linkedin.com/in/pablo-embarach-boeira/" target="_blank" rel="noopener"
-                                aria-label="Visit Pablo on linkedin (opens in a new tab)">Pablo -
-                                Linkedin <i class="fa-brands fa-linkedin"></i></a>
-                        </li>
-                        <li class="my-1"><a class="footer-links"
-                                href="https://www.linkedin.com/in/linus-elvius-52b098266/" target="_blank"
-                                rel="noopener" aria-label="Visit Linus on linkedin (opens in a new tab)">Linus
-                                - Linkedin <i class="fa-brands fa-linkedin"></i></a>
-                        </li>
-                        <li class="my-1"><a class="footer-links" href="https://github.com/fenton1000" target="_blank"
-                                rel="noopener" aria-label="Visit Mark on Github (opens in a new tab)">Mark - Github <i
-                                    class="fa-brands fa-github"></i></a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </footer>
     <!-- Bootstrap Script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
