--- a/game.html
+++ b/game.html
@@ -30,7 +30,7 @@
       </div>
     </nav>
     <!-- Players and inventory -->
-    <div class="row row-cols-1">
+    <div class="row row-cols-1" id="game-board">
 
       <!-- Enemy Card -->
       <div class="col-4">
@@ -212,6 +212,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
   </script>
+  
+  <!-- Main script JS -->
+  <script defer src="assets/js/script.js"></script>
 
   <!-- Grid for ingredients and potions -->
   <script>
