--- a/kitchen.html
+++ b/kitchen.html
@@ -23,8 +23,10 @@
                     </div>
                     <div class="col-md-8" style="display: flex; align-self: flex-end">
                         <div class="row cauldron-container">
-                            <div class="col-md-6 cauldron"></div>
-                            <div class="col-md-6 content-list"></div>
+                            <div class="col-md-6 cauldron" style="z-index: 1;"></div>
+                            <div class="col-md-6 content-list-container">
+                                <div class="content-list"></div>
+                            </div>
                         </div>
                     </div>
                     <!-- Right column (1/3 of the screen) -->
@@ -62,7 +64,16 @@
 
         </div>
     </main>
+
+    <div id="dropdown-alert" class="dropdown-alert">
+        <div class="dropdown-alert-content">
+            <div class="dropdown-alert-text"><div class="dropdown-alert-img"></div></div>
+        </div>
+    </div>
+
     <script src="assets/js/kitchen.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
