--- a/creators.html
+++ b/creators.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/creators.css">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
@@ -17,6 +18,41 @@
 <body>
     <section class="background">
         <h1 class="white-color-text main-heading">Witches Brew</h1>
+        <div class="creator-card text-center">
+            <h2>Director of Witchcraft</h2>
+            <p>Erikas</p>
+            <p>Hackathon Veteran</p>
+            <a class="card-links" href="https://github.com/Erikas-Ramanauskas" target="_blank" rel="noopener"
+                aria-label="Visit Erikas on Github (opens in a new tab)"><i class="fa-brands fa-github"></i></a>
+        </div>
+        <div class="creator-card text-center">
+            <h2>Master of Attack</h2>
+            <p>Pavlo</p>
+            <p>Hackathon Enthusiast</p>
+            <a class="card-links" href="https://github.com/FlashDrag" target="_blank" rel="noopener"
+                aria-label="Visit Pavlo on Github (opens in a new tab)"><i class="fa-brands fa-github"></i></a>
+        </div>
+        <div class="creator-card text-center">
+            <h2>Mixer of Potions</h2>
+            <p>Linus</p>
+            <p>Hackathon Newbie</p>
+            <a class="card-links" href="https://www.linkedin.com/in/linus-elvius-52b098266/" target="_blank" rel="noopener"
+                aria-label="Visit Linus on linkedin (opens in a new tab)"><i class="fa-brands fa-linkedin"></i></a>
+        </div>
+        <div class="creator-card text-center">
+            <h2>Producer of Style</h2>
+            <p>Pablo</p>
+            <p>Hackathon Newbie</p>
+            <a class="card-links" href="https://www.linkedin.com/in/pablo-embarach-boeira/" target="_blank" rel="noopener"
+                aria-label="Visit Pablo on linkedin (opens in a new tab)"><i class="fa-brands fa-linkedin"></i></a>
+        </div>
+        <div class="creator-card text-center">
+            <h2>Writer of Words</h2>
+            <p>Mark</p>
+            <p>Hackathon Newbie</p>
+            <a class="card-links" href="https://www.linkedin.com/in/mark-fenton/" target="_blank" rel="noopener"
+                aria-label="Visit Mark on linkedin (opens in a new tab)"><i class="fa-brands fa-linkedin"></i></a>
+        </div>
     </section>
     <!-- Bootstrap Script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
