Finalize witches kitchen

--- a/kitchen.html
+++ b/kitchen.html
@@ -16,7 +16,10 @@
                 <div class="row">
                     <!-- Left column (2/3 of the screen) -->
                     <div class="col-md-8">
-                        <div id="title"></div>
+                        <div class="header">
+                            <div class="back-btn"></div>
+                            <div id="title"></div>
+                        </div>
                         <div class="row recipe-book-container">
                             <div class="col-md-2 recipe-book"></div>
                         </div>
@@ -72,6 +75,7 @@
     </div>
 
     <div class="open-recipe-book-container">
+        <div class="close-btn"></div>
         <div class="open-recipe-book">
             <div class="left-page">
                 <div class="left-page-header">
@@ -79,9 +83,9 @@
                     <div class="left-page-header-img"></div>
                 </div>
                 <div class="left-page-content">
-                    <div class="left-page-stat"><span class="circle"></span><p class="stat-text">+ 10 Dexterity</p></div>
-                    <div class="left-page-stat"><span class="circle"></span><p class="stat-text">+ 100 Agility</p></div>
-                    <div class="left-page-stat"><span class="circle"></span><p class="stat-text">- 10 Damage</p></div>
+                    <div class="left-page-stat"><span class="circle"></span><p class="stat-text"></p></div>
+                    <div class="left-page-stat"><span class="circle"></span><p class="stat-text"></p></div>
+                    <div class="left-page-stat"><span class="circle"></span><p class="stat-text"></p></div>
                 </div>
             </div>
             <div class="right-page">
@@ -89,11 +93,11 @@
                     <div class="right-page-header-title">Recipe:</div>
                 </div>
                 <div class="right-page-content">
-                    <div class="right-page-ingredient"><span class="recipe-ingredient-img"></span><p class="recipe-ingredient-text">Eye of Newt</p></div>
-                    <div class="right-page-ingredient"><span class="recipe-ingredient-img"></span><p class="recipe-ingredient-text">Pheonix Feather</p></div>
-                    <div class="right-page-ingredient"><span class="recipe-ingredient-img"></span><p class="recipe-ingredient-text">Serpent Scales</p></div>
-                    <div class="right-page-ingredient"><span class="recipe-ingredient-img"></span><p class="recipe-ingredient-text">Basilisk Venom</p></div>
-                    <div class="right-page-ingredient"><span class="recipe-ingredient-img"></span><p class="recipe-ingredient-text">Ancient Celestial Sand</p></div>
+                    <div class="right-page-ingredient"><span class="recipe-ingredient-img"></span><p class="recipe-ingredient-text"></p></div>
+                    <div class="right-page-ingredient"><span class="recipe-ingredient-img"></span><p class="recipe-ingredient-text"></p></div>
+                    <div class="right-page-ingredient"><span class="recipe-ingredient-img"></span><p class="recipe-ingredient-text"></p></div>
+                    <div class="right-page-ingredient"><span class="recipe-ingredient-img"></span><p class="recipe-ingredient-text"></p></div>
+                    <div class="right-page-ingredient"><span class="recipe-ingredient-img"></span><p class="recipe-ingredient-text"></p></div>
                 </div>
             </div>
         </div>
