Adds initial rule page structure

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="d-flex flex-column align-items-center justify-content-around button-box">
                 <a class="btn btn-custom-orange button-custom" href="game.html">Start Game</a>
                 <a class="btn btn-custom-orange button-custom" href="kitchen.html">Witches Kitchen</a>
-                <a class="btn btn-custom-orange button-custom" href="#">How to Play</a>
+                <a class="btn btn-custom-orange button-custom" href="rules.html">How to Play</a>
                 <a class="btn btn-custom-orange button-custom" href="creators.html">The Creators</a>
             </div>
         </div>
