update style on index and creators pages

--- a/creators.html
+++ b/creators.html
@@ -12,46 +12,69 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=UnifrakturMaguntia" />
     <title>Witches Brew - Home</title>
 </head>
 
 <body>
     <section class="background">
         <h1 class="white-color-text main-heading">Witches Brew</h1>
-        <div class="creator-card text-center">
-            <h2>Director of Witchcraft</h2>
-            <p>Erikas</p>
-            <p>Hackathon Veteran</p>
-            <a class="card-links" href="https://github.com/Erikas-Ramanauskas" target="_blank" rel="noopener"
-                aria-label="Visit Erikas on Github (opens in a new tab)"><i class="fa-brands fa-github"></i></a>
-        </div>
-        <div class="creator-card text-center">
-            <h2>Master of Attack</h2>
-            <p>Pavlo</p>
-            <p>Hackathon Enthusiast</p>
-            <a class="card-links" href="https://github.com/FlashDrag" target="_blank" rel="noopener"
-                aria-label="Visit Pavlo on Github (opens in a new tab)"><i class="fa-brands fa-github"></i></a>
-        </div>
-        <div class="creator-card text-center">
-            <h2>Mixer of Potions</h2>
-            <p>Linus</p>
-            <p>Hackathon Newbie</p>
-            <a class="card-links" href="https://www.linkedin.com/in/linus-elvius-52b098266/" target="_blank" rel="noopener"
-                aria-label="Visit Linus on linkedin (opens in a new tab)"><i class="fa-brands fa-linkedin"></i></a>
-        </div>
-        <div class="creator-card text-center">
-            <h2>Producer of Style</h2>
-            <p>Pablo</p>
-            <p>Hackathon Newbie</p>
-            <a class="card-links" href="https://www.linkedin.com/in/pablo-embarach-boeira/" target="_blank" rel="noopener"
-                aria-label="Visit Pablo on linkedin (opens in a new tab)"><i class="fa-brands fa-linkedin"></i></a>
-        </div>
-        <div class="creator-card text-center">
-            <h2>Writer of Words</h2>
-            <p>Mark</p>
-            <p>Hackathon Newbie</p>
-            <a class="card-links" href="https://www.linkedin.com/in/mark-fenton/" target="_blank" rel="noopener"
-                aria-label="Visit Mark on linkedin (opens in a new tab)"><i class="fa-brands fa-linkedin"></i></a>
+        <div class="cards">
+            <div class="text-center">
+                <a class="card-links" href="https://github.com/Erikas-Ramanauskas" target="_blank" rel="noopener"
+                    aria-label="Visit Erikas on Github (opens in a new tab)">
+                    <div class="creator-card ">
+                        <h2>Director of Witchcraft</h2>
+                        <p>Erikas</p>
+                        <p>Hackathon Veteran</p>
+                        <i class="fa-brands fa-github"></i>
+                    </div>
+                </a>
+            </div>
+            <div class="text-center">
+                <a class="card-links" href="https://github.com/FlashDrag" target="_blank" rel="noopener"
+                    aria-label="Visit Pavlo on Github (opens in a new tab)">
+                    <div class="creator-card ">
+                        <h2>Master of Attack</h2>
+                        <p>Pavlo</p>
+                        <p>Hackathon Enthusiast</p>
+                        <i class="fa-brands fa-github"></i>
+                    </div>
+                </a>
+            </div>
+            <div class="text-center">
+                <a class="card-links" href="https://www.linkedin.com/in/linus-elvius-52b098266/" target="_blank"
+                    rel="noopener" aria-label="Visit Linus on linkedin (opens in a new tab)">
+                    <div class="creator-card">
+                        <h2>Mixer of Potions</h2>
+                        <p>Linus</p>
+                        <p>Hackathon Newbie</p>
+                        <i class="fa-brands fa-linkedin"></i>
+                    </div>
+                </a>
+            </div>
+            <div class="text-center">
+                <a class="card-links" href="https://www.linkedin.com/in/pablo-embarach-boeira/" target="_blank"
+                    rel="noopener" aria-label="Visit Pablo on linkedin (opens in a new tab)">
+                    <div class="creator-card ">
+                        <h2>Producer of Style</h2>
+                        <p>Pablo</p>
+                        <p>Hackathon Newbie</p>
+                        <i class="fa-brands fa-linkedin"></i>
+                    </div>
+                </a>
+            </div>
+            <div class="text-center">
+                <a class="card-links" href="https://www.linkedin.com/in/mark-fenton/" target="_blank" rel="noopener"
+                    aria-label="Visit Mark on linkedin (opens in a new tab)">
+                    <div class="creator-card ">
+                        <h2>Writer of Words</h2>
+                        <p>Mark</p>
+                        <p>Hackathon Newbie</p>
+                        <i class="fa-brands fa-linkedin"></i>
+                    </div>
+                </a>
+            </div>
         </div>
     </section>
     <!-- Bootstrap Script -->
