--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section class="background">
         <h1 class="white-color-text main-heading">Witches Brew</h1>
         <div class="d-flex justify-content-center">
-            <div class="d-flex flex-column align-items-center justify-content-around button-box">
+            <div class="d-flex flex-column align-items-center justify-content-around box">
                 <a class="btn btn-custom-orange button-custom" href="game.html">Start Game</a>
                 <a class="btn btn-custom-orange button-custom" href="kitchen.html">Witches Kitchen</a>
                 <a class="btn btn-custom-orange button-custom" href="#">How to Play</a>
