--- a/game-testing.html
+++ b/game-testing.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="col col-lg-9 villain-card">
                     <h5 class="text-center">Enemy Name</h5>
-                    <img src="assets/images/enemies/Tiny_Vampire-removebg-preview.png" class="card-img-top" alt="grim-reaper" data-drop-target="villain">
+                    <img src="assets/images/villains/Tiny_Vampire-removebg-preview.png" class="card-img-top" alt="grim-reaper" data-drop-target="villain">
                 </div>
                 <div class="col-12 enemy-bottom-stats">
                 <!-- Villain Stats -->
@@ -84,7 +84,7 @@
             <!-- Cauldron -->
       <!-- <div class="col"> -->
       <div class="col-12 col-lg-4 order-lg-2 cauldron">
-        <img src="assets/images/general/cauldron_brew.gif" alt="Cauldron" data-drop-target="cauldron">
+        <img src="assets/images/general/cauldron_brew.gif" alt="Cauldron" git="cauldron">
       </div>
       <!-- </div> -->
       <!-- ./cauldron -->
