Added stats adjustments functionality

--- a/rules.html
+++ b/rules.html
@@ -32,7 +32,7 @@
                 <div class="rules-card">
                     <h2>Rules</h2>
                     <ul>
-                        <li>At the outset the player is assigned health points as well as levels for strength, agility
+                        <li>At the outset the player is assigned vitality points as well as levels for strength, agility
                             and
                             dexterity.</li>
                         <li>In each round the player will face an enemy with its own strength, agility and dexterity
@@ -40,9 +40,9 @@
                         </li>
                         <li>To defeat an enemy the player must have higher levels than the enemy in each category??????
                         </li>
-                        <li>If you defeat an enemy you proceed to the next round. If you are defeated you lose health
+                        <li>If you defeat an enemy you proceed to the next round. If you are defeated you lose vitality
                             points
-                            before proceeding to the next round. The game is over when you lose all your health points.
+                            before proceeding to the next round. The game is over when you lose all your vitality points.
                         </li>
                         <li>At the outset you are also assigned ingredients. As you move through the rounds you will
                             also be
