added menu navigation on game page

--- a/game.html
+++ b/game.html
@@ -12,6 +12,7 @@
 
 <body class="d-flex flex-column vh-100">
 
+
   <!-- Characters -->
   <div class="row w-100 flex-grow-1" id="game-board">
 
@@ -53,12 +54,24 @@
         </div>
         <div class="card-body">
           <div class="villain">
-            <img src="assets/images/villains/Tiny_Vampire-removebg-preview.png" class="card-img-bottom" alt="tiny-vampire">
+            <img src="assets/images/villains/Tiny_Vampire-removebg-preview.png" class="card-img-bottom"
+              alt="tiny-vampire">
           </div>
         </div>
       </div>
     </div>
     <!-- ./villain card -->
+
+    <!-- Navigation menu -->
+
+    <div class="menu" id="menu">
+      <ul>
+        <li class="icon"><a class="menu_icon" href="/">Home</a></li>
+        <li class="icon"><a class="menu_icon" href="kitchen.html">Kitchen</a></li>
+      </ul>
+    </div>
+
+
 
     <!-- Player Card -->
     <div class="col-4">
@@ -116,6 +129,7 @@
     </div>
     <!-- ./inventory potions -->
   </div>
+
 
   <!-- Game Rules Modal -->
   <div class="modal fade" id="gameRulesModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
