Abstract out and fix recipe book

--- a/assets/js/test.html
+++ b/assets/js/test.html
@@ -5,8 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="../css/kitchen.css">
 </head>
 <body>
     <script type="module" src="test.js"></script>
+
+    <div class="open-recipe-book-container">
+        <div class="close-btn"></div>
+        <div class="open-recipe-book">
+            <div class="left-page">
+                <div class="left-page-header">
+                    <div class="left-page-header-title"><p>Naiads Aquatic Aura Brew</p></div>
+                    <div class="left-page-header-img"></div>
+                </div>
+                <div class="left-page-content">
+                    <div class="left-page-stat"><span class="circle"></span><p class="stat-text"></p></div>
+                    <div class="left-page-stat"><span class="circle"></span><p class="stat-text"></p></div>
+                    <div class="left-page-stat"><span class="circle"></span><p class="stat-text"></p></div>
+                </div>
+            </div>
+            <div class="right-page">
+                <div class="right-page-header">
+                    <div class="right-page-header-title">Recipe:</div>
+                </div>
+                <div class="right-page-content">
+                    <div class="right-page-ingredient"><span class="recipe-ingredient-img"></span><p class="recipe-ingredient-text"></p></div>
+                    <div class="right-page-ingredient"><span class="recipe-ingredient-img"></span><p class="recipe-ingredient-text"></p></div>
+                    <div class="right-page-ingredient"><span class="recipe-ingredient-img"></span><p class="recipe-ingredient-text"></p></div>
+                    <div class="right-page-ingredient"><span class="recipe-ingredient-img"></span><p class="recipe-ingredient-text"></p></div>
+                    <div class="right-page-ingredient"><span class="recipe-ingredient-img"></span><p class="recipe-ingredient-text"></p></div>
+                </div>
+            </div>
+        </div>
+        <div class="page-btns-container">
+            <div class="previous"><--</div>
+            <div class="next"><--</div>
+        </div>    
+    </div>
 </body>
 </html>
